--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-# RPC URLs
-MAINNET_RPC_URL=https://eth-mainnet.example.com
-SEPOLIA_RPC_URL=https://eth-sepolia.example.com
-ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
+# Alchemy or other providers
+MAINNET_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
+ARBITRUM_RPC_URL=https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY
 
-# API Keys
-ALCHEMY_API_KEY=your_alchemy_api_key
-ETHERSCAN_API_KEY=your_etherscan_api_key
-CMC_API_KEY=your_coinmarketcap_api_key
+ALCHEMY_API_KEY=your_alchemy_key
+
+# Optional (for verification)
+ETHERSCAN_API_KEY=your_etherscan_key
+CMC_API_KEY=your_coinmarketcap_key
 
 # Deployment
-PRIVATE_KEY=your_private_key_here_do_not_commit_actual_key
+PRIVATE_KEY=0xyour_private_key_without_quotes
 
-# Features
-REPORT_GAS=true 
+# Gas Report
+REPORT_GAS=true
